--- a/index.html
+++ b/index.html
@@ -3,12 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/main.css">
     <title>Generator</title>
 </head>
 <body>
     <header><h1>VRRPG Character Creation Generator</h1></header>
-    <button>Generate Character!</button>
-    <section id="holder"></section>
+    <main>
+        <h2>Disclamer: This is not perfect, the real document has options for multiclassing and limiting races/classes/backgrounds</h2>
+        <button id="button">Generate Character!</button>
+        <p id="holder"></p>
+    </main>
     <footer><p>Auto verson of <a href="https://www.furaffinity.net/view/52886700">CloudKaiju's table</a></p></footer>
 </body>
+<script src="scripts/generator.js"></script>
 </html>
